# vbt-futures

./: .gitignore  README.md  pyproject.toml  pytest.ini
benchmarks/: bench_simulator.py
docs/superpowers/plans/: 2026-06-11-vbt-futures-plan.md
docs/superpowers/specs/: 2026-06-11-vbt-futures-design.md
examples/: demo_synthetic.py  stress_test_10x1000.py
src/vbt_futures/: __init__.py  __init__.py,cover  enums.py  enums.py,cover  portfolio.py  portfolio.py,cover  records.py  records.py,cover  simulator.py  simulator.py,cover  sizing.py  spec.py  spec.py,cover  utils.py  utils.py,cover
tests/: conftest.py  test_derived.py  test_enums.py  test_freq.py  test_liquidation.py  test_margin.py  test_portfolio.py  test_records.py  test_simulator.py  test_sizing.py  test_spec.py  test_validation.py
